force-app/main/default/objects/Zco_Lab_Event__e/Zco_Lab_Event__e.object-meta.xml
<CustomObject>
    <description>Workbook-defined lab event platform event.</description>
    <label>Zco Lab Event</label>
    <pluralLabel>Zco Lab Event Events</pluralLabel>
</CustomObject>