force-app/main/default/objects/Zco_Lab_Event__e/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>