force-app/main/default/objects/Zco_Lab_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>