force-app/main/default/objects/Zco_Lab_Event__e/fields/Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Payload_Json__c</fullName>
    <label>Payload JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>